--- a/css/index.css
+++ b/css/index.css
@@ -97,6 +97,68 @@ body {
   background: #f9f9fb;
 }
 
+/* 슬라이더 구역 */
+
+#section .slideOuter .slideInner {
+  position: relative;
+}
+
+#section .slideOuter .slideInner button.slick-arrow {
+  border: none;
+  background: none;
+  font-size: 50px;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+#section .slideOuter .slideInner button.slick-next {
+  right: 50px;
+}
+#section .slideOuter .slideInner button.slick-prev {
+  left: 50px;
+  z-index: 999;
+}
+
+#section .slideOuter .slideInner ul.slick-dots {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  bottom: 50px;
+}
+#section .slideOuter .slideInner ul.slick-dots li {
+  display: inline-block;
+  margin: 0 5px;
+}
+#section .slideOuter .slideInner ul.slick-dots li button {
+  border: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-indent: 9999px;
+  overflow: hidden;
+  background: #fff;
+}
+#section .slideOuter .slideInner ul.slick-dots li.slick-active button {
+  background: #f00;
+
+  width: 50px;
+  border-radius: 50px;
+}
+
+/* 슬라이더 자동재생멈춤 버튼 */
+#section .slideOuter {
+  position: relative;
+}
+#section .slideOuter .plapau {
+  position: absolute;
+  bottom: 48px;
+  left: 50%;
+  font-size: 20px;
+  color: #fff;
+  margin-left: 60px;
+}
+
 #section .slide {
   /* 자식이 부모를 기준으로 배치될때 부모한테 주는 속성 */
   position: relative;
@@ -119,17 +181,33 @@ section .slide img {
 }
 #section .slide .text h2 {
   font-size: 100px;
+  opacity: 0;
+  transform: translate3d(0, 100%, 0);
+}
+#section .slick-current.slick-active .slide .text h2 {
+  animation: fadeInUp 1s 1 both 0.3s;
+}
+#section .slick-current.slick-active .slide .text p {
+  animation: fadeInUp 1s 1 both 1.3s;
 }
 #section .slide .text p {
   font-size: 22px;
   margin: 30px 0 80px;
+  opacity: 0;
+  transform: translate3d(0, 100%, 0);
 }
 #section .slide .text a {
+  display: inline-block;
   font-size: 17px;
   color: #58aedd;
   background: #fff;
   padding: 15px 35px;
   border-radius: 50px;
+  opacity: 0;
+  transform: translate3d(0, 100%, 0);
+}
+#section .slick-current.slick-active .slide .text a {
+  animation: fadeInUp 1s 1 both 2.3s;
 }
 
 #section .business ul {
