--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,19 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;400;700;&display=swap");
+
+html {
+  font-size: 16px;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+.blind {
+  position: absolute;
+  left: -9999px;
+  overflow: hidden;
 }
 ul {
   list-style: none;
@@ -44,6 +54,17 @@ body {
 #header h1 {
   float: left;
   padding: 20px 0;
+}
+#header h1 a {
+  display: block;
+  width: 250px;
+  height: 50px;
+  background: url(../image/워드프레스\ 기업홈페이지1\ 로고.png);
+  background-size: contain; /* 짤리지 않게함 */
+  background-repeat: no-repeat;
+}
+#header .menuopen {
+  display: none;
 }
 #header #nav {
   float: right;
@@ -180,7 +201,7 @@ section .slide img {
   text-align: center;
 }
 #section .slide .text h2 {
-  font-size: 100px;
+  font-size: 5vw;
   opacity: 0;
   transform: translate3d(0, 100%, 0);
 }
@@ -195,6 +216,7 @@ section .slide img {
   margin: 30px 0 80px;
   opacity: 0;
   transform: translate3d(0, 100%, 0);
+  word-break: keep-all; /* 한글단어잘림 허용 안하는 속성*/
 }
 #section .slide .text a {
   display: inline-block;
