--- a/css/index.css
+++ b/css/index.css
@@ -51,9 +51,16 @@ body {
   width: 100%;
   z-index: 99; /* 박스겹침이 발생했을때 겹치는 순서를 제어함. 높은값이 위로 올라옴 */
 }
+#header .row {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: stretch;   - 얼라인 기본값 */
+}
 #header h1 {
-  float: left;
-  padding: 20px 0;
+  padding: 0px 0;
+  display: flex;
+  align-items: center;
 }
 #header h1 a {
   display: block;
@@ -67,27 +74,27 @@ body {
   display: none;
 }
 #header #nav {
-  float: right;
+  /* background: red; */
+  display: flex;
 }
 /* #header #nav .depth1 { background:pink } */
+#header #nav .depth1 {
+  display: flex;
+}
 #header #nav .depth1 > li {
-  float: left;
+  /* float: left; */
   margin-left: 48px;
   color: #fff;
   font-family: "Noto Sans KR";
   font-size: 18px;
   border-top: 3px solid transparent;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 #header #nav .depth1 > li:hover .depth2 {
   display: block;
-}
-
-#header #nav .depth1 > li > a {
-  display: block;
-  height: 86.3px;
-  line-height: 86.3px;
 }
 
 #header #nav .depth1 > li:hover {
@@ -233,12 +240,14 @@ section .slide img {
 }
 
 #section .business ul {
-  overflow: hidden;
+  display: flex;
+  /* overflow: hidden; */
 }
 
 #section .business ul li {
-  float: left;
-  width: 25%;
+  /* float: left; */
+  /* width: 25%; */
+  flex: 1;
   text-align: center;
   height: 600px;
   padding: 100px 30px;
@@ -284,11 +293,13 @@ section .slide img {
   padding: 100px 0;
 }
 #section .product .row {
-  overflow: hidden;
+  /* overflow: hidden; */
+  display: flex;
 }
 #section .product .text {
-  float: left;
-  width: 50%;
+  /* float: left; */
+  /* width: 50%; */
+  flex: 1;
   color: #fff;
 }
 
@@ -316,8 +327,9 @@ section .slide img {
   color: #333;
 }
 #section .product .photo {
-  float: left;
-  width: 50%;
+  /* float: left; */
+  /* width: 50%; */
+  flex: 1;
   text-align: center;
   padding-top: 70px;
 }
@@ -333,12 +345,17 @@ section .slide img {
   margin-bottom: 30px;
 }
 #section .customer .row div {
-  overflow: hidden;
+  /* overflow: hidden; */
+  display: flex;
 }
 #section .customer .row div span {
-  width: 33.33%;
-  float: left;
-  padding: 0 15px;
+  /* width: 33.33%;
+  float: left; 
+   padding:0 15px;
+   */
+  flex: 1;
+
+  margin: 0 15px;
 }
 #section .customer .row div span img {
   border: 1px solid #ddd;
