--- a/css/rwdindex.css
+++ b/css/rwdindex.css
@@ -1,5 +1,8 @@
 @media screen and (max-width: 1289px) {
   .row {
+    max-width: 1289px;
+    border: 0px solid #fff;
+    margin: 0 auto;
     padding: 0 10px;
   }
 }
@@ -11,16 +14,18 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 99; /* 박스겹침이 발생했을때 겹치는 순서를 제어함. 높은값이 위로 올라옴 */
+    z-index: 99999; /* 박스겹침이 발생했을때 겹치는 순서를 제어함. 높은값이 위로 올라옴 */
   }
   #header .row {
-    padding: 0;
-  }
-  #header h1 {
-    float: left;
-    padding: 20px 0 20px 10px;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    /* align-items: stretch;   - 얼라인 기본값 */
+    flex-wrap: wrap;
+    padding: 20px 0 0;
   }
   #header h1 a {
+    margin: 0 0 20px 10px;
     display: block;
     width: 250px;
     height: 50px;
@@ -29,48 +34,44 @@
     background-repeat: no-repeat;
   }
   #header .menuopen {
-    display: block;
-    float: right;
+    display: flex;
+    color: #000;
     font-size: 25px;
-    height: 90px;
-    line-height: 90px;
-    margin-right: 10px;
+    align-items: center;
+    margin: 0 10px 20px 0px;
   }
   #header #nav {
-    float: right;
+    /* display: block; */
+    display: none;
     width: 100%;
-    /* 자바스크립트 액션으로 표시/감춤 */
-    display: block;
-  }
-  /* #header #nav .depth1 { background:pink } */
-  #header #nav .depth1 > li {
-    float: none;
-    margin-left: 0px;
-    color: #4a4e57;
-    font-family: "Noto Sans KR";
-    font-size: 12px;
-    border-top: 0px solid #4a4e57;
-    position: relative;
+    /* margin-top: 20px; */
   }
 
-  #header #nav .depth1 > li:hover .depth2 {
+  #header #nav .depth1 {
     display: block;
+  }
+  #header #nav .depth1 > li {
+    display: block;
+    /* float: left; */
+    margin-left: 0px;
+    color: #333;
+    font-family: "Noto Sans KR";
+    font-size: 14px;
+    border-top: 0px solid transparent;
+    position: relative;
+
+    align-items: center;
+  }
+  #header #nav .depth1 > li:hover {
+    color: #45639d;
+    border-top: 0px solid #00a0d2;
   }
 
   #header #nav .depth1 > li > a {
     display: block;
-    height: auto;
-    line-height: 42px;
+    line-height: 41px;
     border-top: 1px solid #d4d4d4;
     padding-left: 40px;
-  }
-
-  #header #nav .depth1 > li:hover {
-    color: #4a4e57;
-    border-top: 0px solid #4a4e57;
-  }
-  #header #nav .depth1 > li > a:hover {
-    background: #f9f9fb;
   }
 
   #header #nav .depth2 {
@@ -84,7 +85,6 @@
     border-top: 0px solid #45639d;
     display: block;
   }
-
   #header #nav .depth2 > li > a {
     display: block;
     padding: 12px 20px 12px 50px;
@@ -93,93 +93,28 @@
     border-top: 1px solid #d4d4d4;
   }
 
-  #header #nav .depth2 > li > a:hover {
-    background: #f9f9fb;
+  #section .business ul {
+    display: block;
+    /* overflow: hidden; */
   }
 
-  /* 슬라이드 도트버튼 */
-  #section .slideOuter .slideInner ul.slick-dots {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: 30px;
-  }
-  /* 자동재생 표시/멈춤 */
-  #section .slideOuter .plapau {
-    position: absolute;
-    bottom: 28px;
-    left: 50%;
-    font-size: 20px;
-    color: #fff;
-    margin-left: 60px;
+  #section .product .row {
+    /* overflow: hidden; */
+    display: block;
   }
 
-  /* 슬라이드 텍스트 */
-
-  #section .slide .text {
-    top: 40%;
+  #section .customer .row div {
+    /* overflow: hidden; */
+    display: block;
   }
-  #section .slide .text h2 {
-    font-size: 40px;
-    opacity: 0;
-    transform: translate3d(0, 100%, 0);
-  }
-  #section .slide .text p {
-    display: none;
-  }
-  #section .slide .text a {
-    display: inline-block;
-    font-size: 16px;
-    color: #58aedd;
-    background: #fff;
-    padding: 10px 20px;
-    border-radius: 50px;
-    opacity: 0;
-    transform: translate3d(0, 100%, 0);
-    margin-top: 20px;
-  }
-
-  /* business 구역 */
-
-  #section .business ul li {
-    float: left;
-    width: 100%;
-    text-align: center;
-    height: 600px;
-    padding: 100px 30px;
-  }
-
-  /* product 구역 */
-
-  #section .product .text {
-    float: left;
-    width: 100%;
-    color: #fff;
-  }
-
-  #section .product .text h2 {
-    font-size: 50px;
-  }
-
-  #section .product .photo {
-    float: left;
-    width: 100%;
-    text-align: center;
-    padding-top: 70px;
-  }
-
-  /* customer 구역*/
   #section .customer .row div span {
-    width: 100%;
-    float: left;
-    padding: 0 15px;
+    /* width: 33.33%;
+    float: left; 
+     padding:0 15px;
+     */
+    flex: 1;
+    display: block;
+    margin: 15px;
     text-align: center;
-    margin: 10px 0;
-  }
-  #section .customer .row h2 {
-    font-size: 50px;
-    color: #333;
-    text-align: center;
-    margin-bottom: 30px;
   }
 }
